# Belief-Categorization-Framework

./: README.md
belief-dashboard-tool/: .gitignore  README.md  config.yaml  pyproject.toml
belief-dashboard-tool/data/queues/: approved_updates.csv  change_log.csv  criteria_matrix.csv  deferred_updates.csv  extracted_claims.csv  import_log.csv  proposed_updates.csv  reflection_journal.md  rejected_updates.csv  source_dossiers.csv
belief-dashboard-tool/docs/: AGENTFLOWS.md  DEBATE_PACKETS.md  DEBATE_SUMMARIES.md  DEMO_WALKTHROUGH.md  EVIDENCE_CLUSTERS.md  EVIDENCE_NETWORKS.md  OPERATOR_WORKFLOW.md  SAFETY_MODEL.md  SOURCE_BRIEFS.md  SOURCE_COMPARISONS.md  STUDY_QUEUE.md  TROUBLESHOOTING.md  mosaic_sermon_workflow.md
belief-dashboard-tool/tests/: test_agentflow_policies.py  test_agentflows.py  test_artifacts.py  test_cluster_extraction_batch.py  test_command_guides.py  test_config.py  test_corpus_backlog.py  test_corpus_etl.py  test_debate_packets.py  test_debate_summaries.py  test_doctor.py  test_drive_corpus_inventory.py  test_end_to_end_demo.py  test_evidence_clusters_phase25.py  test_evidence_networks.py  test_export_preview.py  test_export_verification.py  test_extraction_workspace.py  test_history_and_recovery.py  test_manual_imports.py  test_operator_preflight.py  test_packet_batch_draft.py  test_phase3_sources.py  test_queues.py  test_reviews.py  test_source_briefs.py  test_source_comparisons.py  test_source_packet_cycle.py  test_source_triage.py  test_study_queue.py  test_workbook_export.py  test_workbook_inspection.py  test_workbook_promotion.py
(+69 files in other folders)
